syntax = "proto3";

package commander;

import "common.proto";

option go_package="proto";

message GetSecretRequest {
    string namespace = 1;
    string name = 2;
}

message GetSecretResponse {
    Result result = 1;
    Secret secret = 2;
}

message SetSecretRequest {
    string release_name = 1;
    string namespace = 2;
    Secret secret = 5;
}

message SetSecretResponse {
    Result result = 1;
}
